# anki-agent

./: README.md
anki_flow/: .gitignore  README.md  pyproject.toml  requirements.txt
anki_flow/flashcards/: flashcards.json
anki_flow/notes_folder/: Flows.txt
anki_flow/src/anki_flow/: main.py
anki_flow/src/anki_flow/crews/anki_crew/: crew.py
anki_flow/src/anki_flow/crews/anki_crew/config/: agents.yaml  tasks.yaml
anki_flow/src/anki_flow/crews/tools/: custom_tool.py
