[project]
name = "anki_flow"
version = "0.1.0"
description = "anki-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0",
]

[project.scripts]
kickoff = "anki_flow.main:kickoff"
run_crew = "anki_flow.main:kickoff"
plot = "anki_flow.main:plot"
upload-only = "anki_flow.main:upload_only"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
